# default-strucutre-python-project

./: .gitignore  pyproject.toml
.github/workflows/: continuous_integration.yml
